src/app/styles.css
.legend {
  color: #444;
  border: 1px solid rgba(0, 0, 0, 0.2);
}

.legend-title {
  font-weight: bold;
}

.legend-item {
  display: flex;
  align-items: center;
}

.legend-circle {
  display: inline-block;
  border-radius: 50%;
  margin-right: 6px;
  width: 10px; 
  height: 10px;
}

.invalid-btn {
  background-color: #f4f9ff !important;   /* light blue */
  box-shadow: 0 0 6px rgba(0, 102, 204, 0.25) !important; /* faint glow */
}

.invalid-btn:hover {
  background-color: #d9ebff !important;
  transition: 
    background-color 0.2s ease-in-out;
}

.valid-btn {
  background-color: #eeeeee !important;   /* soft light grey */
  border-color: #d5d5d5 !important;       /* faint grey border */
  color: #555555 !important;              /* muted text */
}

.legend-circle.unclass-pt {
  border: 1px solid #777;
}

.custom-legend hr {
  border-top: 1px solid #c4c4c4;
  margin: 5px -8px;
}

.slider-panel hr {
  border-top: 1px solid #c4c4c4;
  margin: 15px -20px;
}

.slider-panel p {
  color: #555;
}

.slider-panel {
  position: absolute;
  cursor: inherit;
  z-index: 450;
  padding: 10px 20px;
  background: rgba(255,255,255,0.9);
  border-radius: 5px;
  border: 1px solid rgba(0, 0, 0, 0.2);
  left: 80px; 
  width: 320px;
}

#thin-input > .form-group {
  margin-bottom: 5px;
}

#thin-input .checkbox {
  margin-bottom: 0px;
}

#thin-input .checkbox label {
  font-weight: 700;
}

#thin-input .control-label {
  font-weight: 100;
  color: #676767;
}

.overlay {
  position: absolute;
  top: 0; left:0; right:0; bottom:0;
  background: rgba(255,255,255,0.8);
  z-index: 10;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #666;
  font-size: 1.2em;
  text-align: center;
  padding: 30px;
  height: 100%;
}

.leaflet-control-layers-list {
  max-height: 500px;
  overflow-y: auto;
  overflow-x: hidden;
}

.tooltip-inner {
  max-width: 300px;
  padding: 8px 12px;
  font-size: 14px;
}

.tooltip.right .tooltip-inner {
  width: 300px !important;
  text-align: left;
}

/* Markdown container */
.markdown-body {
  max-width: 800px;        /* Limit line width */
  margin: 20px auto;       /* Center content with vertical margin */
  padding: 0 15px;         /* Horizontal padding */
  font-family: sans-serif;
  line-height: 1.5;
  color: #333;
}

/* Headings */
.markdown-body h1, 
.markdown-body h2, 
.markdown-body h3, 
.markdown-body h4 {
  margin-top: 0.6em;
  font-weight: 600;
  color: #444;
}

.markdown-body h1 {
  text-align: center;
}

/* Inline code */
.markdown-body code {
  background-color: #f0f0f0;
  border-radius: 3px;
  padding: 2px 4px;
  color: #022658;
  border-radius: 5px;
}

/* Tables */
.markdown-body table {
  border-collapse: collapse;
  width: 50%;
  margin: 1em auto 1em auto;
}

.markdown-body table th, 
.markdown-body table td {
  border: 1px solid #ccc;
  padding: 6px 10px;
  text-align: left;
}

.markdown-body table th {
  background-color: #f5f5f5;
}

.fa-circle-question {
  cursor: pointer;
  color: #999;
}

.authorship {
  margin: 2em auto 1em auto;
  color: #555;
  font-size: 0.9em;
  text-align: center;
  line-height: 1.5;
}

.authorship .author {
  font-weight: 500;
  color: #333;
  margin-bottom: 0.2em;
}

.authorship .affiliation {
  font-style: italic;
  margin-bottom: 0.2em;
  color: #555;
}

